Fix Loading component overflow issue

--- a/src/components/shared/styles/Loading.module.css
+++ b/src/components/shared/styles/Loading.module.css
@@ -1,9 +1,12 @@
-.loading {
+.wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 50px;
     height: 100%;
+}
+
+.loading {
+    font-size: 50px;
     animation-name: wiggle;
     animation-duration: 1s;
     animation-iteration-count: infinite;
